Billing Management System done

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Billing_Mangement_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itext.jar=lib\\itext.jar
 file.reference.rs2xml.jar=lib\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.itext.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
